# lokutor-sdk

./: .gitignore  API_CONFIG_REFERENCE.md  LICENSE  README.md
js/: .gitignore  API_REFERENCE.md  API_REFERENCE.txt  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  tsconfig.json
js/examples/: browser-audio-example.ts  node_chat.ts  node_tts.ts  viseme-example.ts
js/src/: audio-utils.ts  browser-audio.ts  client.ts  index.ts  node-audio.ts  types.ts
js/tests/: audio-utils.test.ts  browser-audio.test.ts  client.test.ts  live-smoke.mjs  tts.test.ts  types.test.ts  viseme-integration.test.ts  voice-agent.test.ts
js/tests/docs/: docs-code-samples.test.ts  raw-websocket.test.ts
js/tests/integration/: production.test.ts
python/: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  PACKAGE_INFO.md  README.md  TROUBLESHOOTING.md  publish.py  publish_stdlib.py  pyproject.toml  pytest.ini  setup.py
python/examples/: advanced_chat.py  simple_chat.py  simple_tts.py  viseme_example.py
python/lokutor/: __init__.py  audio_utils.py  client.py  config.py
python/tests/: test_client.py  test_sdk_logic.py
