[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokutor-voice-agent"
version = "1.0.0"
authors = [
  { name="Lokutor", email="support@lokutor.com" },
]
description = "Production-ready Python SDK for Lokutor Voice Agent - Real-time AI voice conversations"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["voice", "ai", "agent", "conversation", "tts", "stt", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websocket-client>=1.0.0,<2.0.0",
    "pyaudio>=0.2.13",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/lokutor-ai/lokutor-sdk"
"Bug Tracker" = "https://github.com/lokutor-ai/lokutor-sdk/issues"
